@@ -23,6 +23,7 @@
  					<includes>
  						<include>**/ApiTestSuite.class</include>
  					</includes>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
